--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@toolpad/core": "^0.11.0",
     "axios": "^1.7.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^6.4.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
