--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^6.2.0",
     "@mui/material": "^6.2.0",
+    "@mui/x-charts": "^7.23.2",
     "@toolpad/core": "^0.11.0",
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
